--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="DESCRIPTION META TAG">
-  <meta property="og:title" content="INF-O1 PI-ZERO"/>
-  <meta property="og:description" content="INF-o1 Pi-zero: Initiating the Journey to the Infinity of LLM Reasoning"/>
+  <meta property="og:title" content="AURORA"/>
+  <meta property="og:description" content="AURORA: Automated Training Framework of Universal Process Reward Models via Ensemble Prompting and Reverse Verification"/>
   <meta property="og:url" content="URL OF THE WEBSITE"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/image/your_banner_image.png" />
@@ -24,8 +24,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>INF-o1 Team</title>
-  <link rel="icon" type="image/x-icon" href="https://cdn-avatars.huggingface.co/v1/production/uploads/63ed9862679c2cc40abb55d2/0n6g0jngiKkRjaEoAvPmM.png">
+  <title>AURORA</title>
+  <link rel="icon" type="image/x-icon" href="https://mgnl-public.busfinland-prod.magnolia-platform.com/.imaging/mte/visit-finland-theme/xlUpW/dam/vf/Northern-Lights/Northern-Lights_mirror-aurora_autumn---Markus-Kiili_optimized.jpg/jcr:content/Northern%20Lights_mirror%20aurora_autumn%20-%20Markus%20Kiili_optimized.jpg">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
