--- a/index.html
+++ b/index.html
@@ -63,19 +63,12 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">INF-o1 \(\pi_0\): Initiating the Journey to the Infinity of LLM Reasoning</h1>
+            <h1 class="title is-1 publication-title">AURORA: Automated Training Framework of Universal Process Reward Models via Ensemble Prompting and Reverse Verification</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://www.infly.cn/#about-us" target="_blank">INF-o1 Team</a></span>
+                <a href="https://www.infly.cn/#about-us" target="_blank">Anonymous for ICML 2025 Submission</a></span>
                   </div>
-
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">
-                      <img src="./static/images/inf_logo.png" alt="Company Icon" class="adaptive-icon" style="width: 120px; vertical-align: middle; margin-right: 5px;">INFLY TECH (Shanghai) Co., Ltd.<br>2024.12.31
-                    </span>
-                  </div>
-
                   <div class="column has-text-centered">
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
