--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                       <a href="https://www.infly.cn/" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
-                        <i class="fas fa-external-link-alt"></i>
+                        <i class="ai ai-arxiv"></i>
                       </span>
-                      <span>Home Page</span>
+                      <span>Arxiv</span>
                     </a>
                   </span>
 
@@ -123,29 +123,12 @@
 </section>
 
 
-<!-- Teaser video-->
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
-        <source src="static/videos/inf_demo.mp4"
-        type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered is-size-6">
-        INF AI specializes in foundational large language model technology and applications. We develop trustworthy vertical-domain models and AI-native solutions tailored to industry needs. Our team of expert AI scientists and industry leaders focuses on practical "gray-box" technologies, unlocking the productivity of large language models to drive innovation across sectors. Our mission in the INF-o1 project is to enhance the reasoning capabilities of LLMs across various industrial domains and ensure a trustworthy reasoning process to serve industry needs.
-      </h2>
-    </div>
-  </div>
-</section>
-<!-- End teaser video -->
-
 <!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="is-two-thirds">
-        <h2 class="title is-3">Overview</h2>
+        <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified is-size-5">
           <p>
             We are pleased to share the initial checkpoint of our reasoning foundation large language model as an open-source resource. This checkpoint is intended to help evaluate our team's data production pipeline across various domains, including mathematics, programming, logic, safety, and others. Its goal is to provide a solid starting point for developing a robust policy for the subsequent reinforcement learning process.
