--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://www.infly.cn/#about-us" target="_blank">Anonymous for ICML 2025 Submission</a></span>
+                Anonymous for ICML 2025 Submission</span>
                   </div>
                   <div class="column has-text-centered">
                     <div class="publication-links">
@@ -116,6 +116,10 @@
               </span> -->
             </div>
           </div>
+            <div class="is-size-4 publication-authors">
+              <!-- Paper authors -->
+            <span class="author-block">The UniversalBench will be open-sourced due to acceptence.</span>
+         </div>
         </div>
       </div>
     </div>
