--- a/index.html
+++ b/index.html
@@ -144,6 +144,18 @@
 </section>
 <!-- End paper abstract -->
 
+<section class="hero is-small">
+<div class="hero-body">
+  <div class="container">
+    <h2 class="title">Poster</h2>
+
+    <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
+        </iframe>
+      
+    </div>
+  </div>
+</section>
+
 
 
 
@@ -211,7 +223,7 @@
 <!-- End image carousel -->
 
 
-<section class="section hero is-light">
+<section class="section hero">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="is-two-thirds">
@@ -219,7 +231,7 @@
           <p>ProcessBench experimental results shown in Table 1 demonstrate that Universal-PRM-7B, trained using our proposed AURORA, achieves superior performance on the ProcessBench benchmark, excelling in both the overall average score and evaluations across four subsets. These results highlight the effectiveness of our approach in generalization under a universal policy training distribution and underscore the robustness of our proposed ensemble prompting techniques.
             </p>
           <p>
-            Experimental results, as shown in the \hl{Table} \ref{tab:universalbench}, demonstrate that UniversalBench training under our proposed AURORA framework has achieved superior performance, highlighting its strong generalization capabilities across diverse policy distributions. By training under the AURORA framework, UniversalBench effectively addresses the challenges by constructing \(\mathcal{D}_{\text{gen}}\) using diverse policy and prompt distributions, particularly containing long CoT reasoning. This indicates the robustness of our approach in capturing and adapting to a wide range of policy behaviors, thereby outperforming existing methods in accuracy, making it applicable to real-world scenarios where the update policy distributions are dynamic. 
+            Experimental results, as shown in the Table 2, demonstrate that UniversalBench training under our proposed AURORA framework has achieved superior performance, highlighting its strong generalization capabilities across diverse policy distributions. By training under the AURORA framework, UniversalBench effectively addresses the challenges by constructing \(\mathcal{D}_{\text{gen}}\) using diverse policy and prompt distributions, particularly containing long CoT reasoning. This indicates the robustness of our approach in capturing and adapting to a wide range of policy behaviors, thereby outperforming existing methods in accuracy, making it applicable to real-world scenarios where the update policy distributions are dynamic. 
           </p>
         </div>
       </div>
@@ -228,7 +240,7 @@
 </section>
 
 
-<section class="section hero">
+<section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="is-two-thirds">
