--- a/index.html
+++ b/index.html
@@ -144,14 +144,16 @@
 </section>
 <!-- End paper abstract -->
 
-<section class="hero is-small">
-<div class="hero-body">
-  <div class="container">
-    <h2 class="title">Poster</h2>
 
-    <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
-        </iframe>
-      
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="is-two-thirds">
+        <h2 class="title is-3">Framework</h2>
+        <div class="content has-text-justified is-size-5">
+          <img src="static/images/framework_aurora_1.png" alt="The overall workflow of AURORA." class="image is-4by3">
+        </div>
+      </div>
     </div>
   </div>
 </section>
