--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">AURORA: Automated Training Framework of Universal Process Reward Models via Ensemble Prompting and Reverse Verification</h1>
+            <h1 class="title is-1 publication-title">AURORA</h1>
+            <h1 class="title is-2 publication-title">Automated Training Framework of Universal Process Reward Models via Ensemble Prompting and Reverse Verification</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
