--- a/index.html
+++ b/index.html
@@ -138,9 +138,6 @@
           <p>
             The reasoning capabilities of advanced large language models (LLMs) like o1 have revolutionized artificial intelligence applications. Nevertheless, evaluating and optimizing complex reasoning processes remain significant challenges due to diverse policy distributions and the inherent limitations of human effort and accuracy. In this paper, we present AURORA, a novel automated framework for training universal process reward models (PRMs) using ensemble prompting and reverse verification. The framework employs a two-phase approach: First, it uses diverse prompting strategies and ensemble methods to perform automated annotation and evaluation of processes, ensuring robust assessments for reward learning. Second, it leverages practical reference answers for reverse verification, enhancing the model’s ability to validate outputs and improving training accuracy. To assess the framework’s performance, we extend beyond the existing ProcessBench benchmark by introducing UniversalBench, which evaluates reward predictions across full trajectories under diverse policy distribtion with long Chain-of-Thought (CoT) outputs. Experimental results demonstrate that AURORA enhances process evaluation accuracy, improves PRMs' accuracy for diverse policy distributions and long-CoT responses. 
           </p>
-          <p>
-            <img src="static/images/framework_aurora_1.png" alt="The overall workflow of AURORA." class="width: 66%; height: auto;">
-          </p>
         </div>
       </div>
     </div>
@@ -148,10 +145,25 @@
 </section>
 <!-- End paper abstract -->
 
-
-
-
 <section class="section hero">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="is-two-thirds">
+        <h2 class="title is-3">Overall Workflow of AURORA</h2>
+        <div class="content has-text-justified is-size-5">
+           <p>
+            <img src="static/images/framework_aurora_1.png" alt="The overall workflow of AURORA." class="width: 66%; height: auto;">
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+<section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="is-two-thirds">
@@ -197,7 +209,7 @@
 <!-- End image carousel -->
 
 
-<section class="section hero">
+<section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="is-two-thirds">
@@ -214,7 +226,7 @@
 </section>
 
 
-<section class="section hero is-light">
+<section class="section hero">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="is-two-thirds">
