--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>AURORA</title>
-  <link rel="icon" type="image/x-icon" href="https://mgnl-public.busfinland-prod.magnolia-platform.com/.imaging/mte/visit-finland-theme/xlUpW/dam/vf/Northern-Lights/Northern-Lights_mirror-aurora_autumn---Markus-Kiili_optimized.jpg/jcr:content/Northern%20Lights_mirror%20aurora_autumn%20-%20Markus%20Kiili_optimized.jpg">
+  <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Aurora_borealis_over_Eielson_Air_Force_Base%2C_Alaska.jpg/2560px-Aurora_borealis_over_Eielson_Air_Force_Base%2C_Alaska.jpg">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
