--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
        <div class="item">
         <!-- Your image here -->
         <div class="image-container">
-        <img src="static/images/math_o1.jpeg" alt="MY ALT TEXT"/>
+        <img src="static/images/figure1.png" alt="MY ALT TEXT"/>
       </div>
         <h2 class="subtitle has-text-centered">
           The experiment results on math benchmarks.
@@ -196,7 +196,7 @@
       <div class="item">
         <!-- Your image here -->
         <div class="image-container">
-        <img src="static/images/logical_o1.jpeg" alt="MY ALT TEXT"/>
+        <img src="static/images/figure2.png" alt="MY ALT TEXT"/>
       </div>
         <h2 class="subtitle has-text-centered">
           The experiment results on logical benchmarks.
