--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <img src="static/images/figure1.png" alt="MY ALT TEXT"/>
       </div>
         <h2 class="subtitle has-text-centered">
-          The experiment results on math benchmarks.
+          The experiment results on ProcessBench.
         </h2>
       </div>
       <div class="item">
@@ -199,7 +199,7 @@
         <img src="static/images/figure2.png" alt="MY ALT TEXT"/>
       </div>
         <h2 class="subtitle has-text-centered">
-          The experiment results on logical benchmarks.
+          The experiment results on UniversalBench.
         </h2>
       </div>
   </div>
