--- a/index.html
+++ b/index.html
@@ -202,6 +202,15 @@
           The experiment results on UniversalBench.
         </h2>
       </div>
+        <div class="item">
+        <!-- Your image here -->
+        <div class="image-container">
+        <img src="static/images/ablation1.png" alt="MY ALT TEXT"/>
+      </div>
+        <h2 class="subtitle has-text-centered">
+          The experiment results of ablation.
+        </h2>
+      </div>
   </div>
 </div>
 </div>
