--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <h2 class="title is-3">Overall Workflow of AURORA</h2>
         <div class="content has-text-justified is-size-5">
            <p>
-            <img src="static/images/framework_aurora_1.png" alt="The overall workflow of AURORA." class="width: 66%; height: auto;">
+            <img src="static/images/framework_v2.png" alt="The overall workflow of AURORA." class="width: 66%; height: auto;">
           </p>
         </div>
       </div>
@@ -305,12 +305,11 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code class="language-bibtex">
-@misc{inftech_pi_zero2024,
-  author       = {INF-o1 Team},
-  title        = {INF-o1 (\(\pi_0\)): Initiating the Journey to the Infinity of LLM Reasoning},
-  year         = {2024},
-  url          = {https://inftech-pi-zero.github.io/},
-  note         = {Accessed: 2024-12-31}
+@misc{auroraprm2024,
+  author       = {},
+  title        = {AURORA: Automated Training Framework of Universal Process Reward Models via Ensemble Prompting and Reverse Verification},
+  year         = {2025},
+  url          = {https://auroraprm.github.io/}
 }
     </code></pre>
   </div>
