--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                       </a>
                     </span>
 
-                    <!-- Supplementary PDF link -->
-                    <span class="link-block">
+                    <!-- Arxiv link -->
+<!--                     <span class="link-block">
                       <a href="https://huggingface.co/" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
@@ -92,7 +92,7 @@
                       </span>
                       <span>Arxiv</span>
                     </a>
-                  </span>
+                  </span> -->
 
                   <!-- Github link -->
                   <!-- <span class="link-block">
@@ -305,8 +305,8 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code class="language-bibtex">
-@misc{auroraprm2024,
-  author       = {},
+@misc{auroraprm2025,
+  author       = {AURORA},
   title        = {AURORA: Automated Training Framework of Universal Process Reward Models via Ensemble Prompting and Reverse Verification},
   year         = {2025},
   url          = {https://auroraprm.github.io/}
