--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://huggingface.co/" target="_blank"
+                        <a href="https://huggingface.co/universalprm/Universal-PRM" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Hugging Face" style="width: 20px; height: 20px;">
