--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                Anonymous for ICML 2025 Submission</span>
+                Anonymous</span>
                   </div>
                   <div class="column has-text-centered">
                     <div class="publication-links">
